--- a/LifeCLassForm.css
+++ b/LifeCLassForm.css
@@ -21,13 +21,13 @@ a{
     width: 10px;
 }
 ::-webkit-scrollbar-track {
-    background: black;
+    background: #191825;
 }
 ::-webkit-scrollbar-thumb {
-    background: #f1f1f1;
+    background: #FFA3FD;
 }
 ::selection{
-  background: rgb(0,123,255,0.3);
+    background: rgb(0,123,255,0.3);
 }
 .content{
   max-width: 1550px;
@@ -35,13 +35,13 @@ a{
   padding: 0 30px;
 }
 .navbar{
-  position: fixed;
-  width: 100%;
-  z-index: 2;
-  padding: 25px 0;
-  transition: all 0.3s ease;
-  background-color: #1b1b1b;
-}
+    position: fixed;
+    width: 100%;
+    z-index: 2;
+    padding: 25px 0;
+    transition: all 0.3s ease;
+    background-color: #3EB489;
+  }
 .navbar.sticky{
   background: #1b1b1b;
   padding: 10px 0;
@@ -87,68 +87,7 @@ a{
   top: 20px;
   z-index: 2;
 }
-@media (max-width: 1230px) {
-  .content{
-    padding: 0 60px;
-  }
-}
-@media (max-width: 1100px) {
-  .content{
-    padding: 0 40px;
-  }
-}
-@media (max-width: 900px) {
-  .content{
-    padding: 0 30px;
-  }
-}
-@media (max-width: 868px) {
-  body.disabled{
-    overflow: hidden;
-  }
-  .icon{
-    display: block;
-  }
-  .icon.hide{
-    display: none;
-    z-index: 2;
-  }
-  .navbar .menu-list{
-    position: fixed;
-    height: 100vh;
-    width: 100%;
-    max-width: 400px;
-    left: -100%;
-    top: 0px;
-    display: block;
-    padding: 40px 0;
-    text-align: center;
-    background: #222;
-    transition: all 0.3s ease;
-  }
-  .navbar.show .menu-list{
-    left: 0%;
-  }
-  .navbar .menu-list li{
-    margin-top: 45px;
-  }
-  .navbar .menu-list li a{
-    font-size: 23px;
-    margin-left: -100%;
-    transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  }
-  .navbar.show .menu-list li a{
-    margin-left: 0px;
-  }
-  .navbar .logo img{
-    width: 40%;
-  }
 
-  .icon img{
-    width: 100%;
-    max-width: 40px;
-  }
-}
 
 .textPrayer{
     padding-top: 15%;
@@ -207,7 +146,7 @@ textarea{
 
 button{
     padding: 2%;
-    background-color: #e23c52;
+    background-color: #3EB489;
     color: white;
     border: none;
     margin-top: 2%;
@@ -279,8 +218,8 @@ button{
         margin-top: 2%;
         transition: 0.5s;
         font-family: 'Source Code Pro';
-        font-size: 3vw;
-        width: 20%;
+        font-size: 2.2vw;
+        width: 30%;
     }
 }
 
@@ -288,157 +227,166 @@ button:hover{
     background-color: black;
 }
 
+
+
 .bottomLinks{
     display: flex;
     margin-top: 5%;
-    background-color: black;
+    background-color: #3EB489;
     color: white;
-    border-bottom: 5px grey solid;
-}
+    border-bottom: 5px white  solid;
+  }
   
-.firstGrid{
+  .firstGrid{
     text-align: center;
     border-right: white 1px solid;
     padding: 2%;
     width: 20%;
-}
+  }
   
-.firstGrid img{
-    width: 50%;
-}
+  .firstGrid img{
+    width: 70%;
+  }
   
-.firstGrid h1{
+  .firstGrid h1{
     margin-top: 5%;
     text-align: center;
-}
+  }
   
-.firstGrid a{
+  .firstGrid a{
     margin-top: 7%;
+    color: white;
     font-size: 3.5vw;
     font-family: 'Source Code Pro';
-    color: white;
-}
+  }
   
-.firstGrid p{
+  .firstGrid p{
     margin-top: 10%;
     font-size: 1vw;
     text-align: left;
-    color: grey;
+    color: black;
     font-family: 'Source Code Pro';
-}
+  }
   
-/* =================================================== */
+  /* =================================================== */
   
   
-.secondGrid{
+  .secondGrid{
     width: 20%;
     display: inline-block;
     margin-left: 3%;
     margin-top: 4%;
-}
+  }
   
-.secondGrid p{
+  .secondGrid p{
     font-family: 'Source Code Pro';
     font-size: 1.2vw;
-}
+  }
   
-.botli{
+  .botli{
     margin-top: 40%;
-}
+  }
   
-.botli p{
+  .botli p{
     margin-bottom: 2%;
-}
+  }
   
-.botli a{
+  .botli a{
     font-family: 'Source Code Pro';
     font-size: 1.2vw;
-    color: gray;
-}
-  
-.botli a:hover{
     color: white;
+  }
+  
+  .botli a:hover{
+    color: black;
     transition: 0.5s;
-}
+  }
   
-/* =================================================== */
+  /* =================================================== */
   
-.thirdGrid{
+  .thirdGrid{
     width: 20%;
     display: inline-block;
     margin-top: 4%;
-}
+  }
   
-.thirdGrid p{
+  .thirdGrid p{
     font-family: 'Source Code Pro';
     font-size: 1.2vw;
-}
+  }
   
-.botli{
+  .botli{
     margin-top: 40%;
-}
+  }
   
-.botli p{
+  .botli p{
     margin-bottom: 2%;
-}
+  }
   
-.botli a{
+  .botli a{
     font-family: 'Source Code Pro';
     font-size: 1.2vw;
-    color: gray;
-}
-  
-.botli a:hover{
     color: white;
-    transition: 0.5s;
-}
+  }
   
-.mobileLinks{
+  .botli a:hover{
+    color: black;
+    transition: 0.5s;
+  }
+  
+  .mobileLinks{
     display: none;
-}
+  }
 
-@media (max-width: 500px) {
-
+  @media (max-width: 500px) {
     .bottomLinks{
         display: none;
-    }
-
-    .mobileLinks{
+      }
+      
+      /* ================================================ */
+    
+      .mobileLinks{
+        margin: 0;
         display: block;
-        background-color: black;
+        background-color: #3EB489;
+        color: white;
+        border-bottom: 5px white solid;
+        overflow-y: hidden;
       }
     
       .mobileLinks .firstGrid{
         text-align: left;
         border-right: white 0px solid;
+        width: 80%;
         padding: 2%;
         padding-left: 10%;
         padding-right: 10%;
-        width: 100%;
         border-bottom: white 1px solid;
         padding-top: 10%;
         padding-bottom: 10%;
       }
       
       .mobileLinks .firstGrid img{
-        width: 30%;
+        width: 25%;
         margin-top: 2%;
       }
       
       .mobileLinks .firstGrid h1{
-        margin-top: 1%;
+        margin-top: 2%;
         text-align: left;
+
       }
       
       .mobileLinks .firstGrid a{
         margin-top: 1%;
         font-size: 7vw;
+        color: white;
         font-family: 'Source Code Pro';
       }
       
       .mobileLinks .firstGrid p{
         font-size: 3vw;
-        color: grey;
+        color: black;
         font-family: 'Source Code Pro';
       }
     
@@ -463,7 +411,9 @@ button:hover{
       }
     
       .links a{
-        color: grey;
+        color: black;
         font-family: 'Source Code Pro';
       }
+    
 }
+
