--- a/marriedforlife.css
+++ b/marriedforlife.css
@@ -473,14 +473,14 @@ a{
     .navbar .menu-list{
       position: fixed;
       height: 100vh;
-      width: 100%;
+      width: 70%;
       max-width: 400px;
       left: -100%;
       top: 0px;
       display: block;
       padding: 40px 0;
       text-align: center;
-      background: #222;
+      background: #cc313d;
       transition: all 0.3s ease;
     }
     .navbar.show .menu-list{
@@ -497,6 +497,18 @@ a{
     .navbar.show .menu-list li a{
       margin-left: 0px;
     }
+    ::-webkit-scrollbar {
+      width: 0px;
+  }
+  ::-webkit-scrollbar-track {
+      background: #cc313d;
+  }
+  ::-webkit-scrollbar-thumb {
+      background: #f7c5cc;
+  }
+  ::selection{
+      background: rgb(0,123,255,0.3);
+  }
   }
   
   /* ==================================================== */
@@ -631,11 +643,11 @@ a{
     }
     
     .column .blog .blogInfo:hover{
-        border: 1px solid #f7c5cc;
+        border: 0px solid #f7c5cc;
     }
     
     .column .blog:hover{
-        transform: scale(1.1);
+        transform: none;
     }
     
     .column .blog  .blogInfo h1{
@@ -678,11 +690,11 @@ a{
     }
     
     .column2 .blog .blogInfo:hover{
-        border: 1px solid #f7c5cc;
+        border: 0px solid #f7c5cc;
     }
     
     .column2 .blog:hover{
-        transform: scale(1.1);
+        transform: none;
     }
     
     .column2 .blog  .blogInfo h1{
@@ -721,11 +733,11 @@ a{
     }
     
     .column2 .blog2 .blogInfo:hover{
-        border: 1px solid #f7c5cc;
+        border: 0px solid #f7c5cc;
     }
     
     .column2 .blog2:hover{
-        transform: scale(1.1);
+        transform: none;
     }
     
     .column2 .blog2 .blogInfo h1{
@@ -764,11 +776,11 @@ a{
     }
     
     .column2 .blog3 .blogInfo:hover{
-        border: 1px solid #f7c5cc;
+        border: 0px solid #f7c5cc;
     }
     
     .column2 .blog3:hover{
-        transform: scale(1.1);
+        transform: none;
     }
     
     .column2 .blog3 .blogInfo h1{
