--- a/Archive1.css
+++ b/Archive1.css
@@ -124,14 +124,14 @@ a img{
   .navbar .menu-list{
     position: fixed;
     height: 100vh;
-    width: 100%;
+    width: 70%;
     max-width: 400px;
     left: -100%;
     top: 0px;
     display: block;
     padding: 40px 0;
     text-align: center;
-    background: #222;
+    background: #2F3C7E;
     transition: all 0.3s ease;
   }
   .navbar.show .menu-list{
@@ -157,6 +157,20 @@ a img{
       width: 100%;
       max-width: 40px;
   }
+
+  /* custom scroll bar */
+::-webkit-scrollbar {
+  width: 0px;
+}
+::-webkit-scrollbar-track {
+  background: #2F3C7E;
+}
+::-webkit-scrollbar-thumb {
+  background: #FBEAEB;
+}
+::selection{
+background: rgb(0,123,255,0.3);
+}
 }
 
 
