--- a/BlogNavBar.css
+++ b/BlogNavBar.css
@@ -103,14 +103,14 @@
     .navbar .menu-list{
       position: fixed;
       height: 100vh;
-      width: 100%;
+      width: 70%;
       max-width: 400px;
       left: -100%;
       top: 0px;
       display: block;
       padding: 40px 0;
       text-align: center;
-      background: #222;
+      background: #2C5F2DFF;
       transition: all 0.3s ease;
     }
     .navbar.show .menu-list{
@@ -136,4 +136,14 @@
         width: 100%;
         max-width: 40px;
     }
+
+    ::-webkit-scrollbar {
+      width: 0px;
+  }
+  ::-webkit-scrollbar-track {
+      background: #2C5F2DFF;
+  }
+  ::-webkit-scrollbar-thumb {
+      background: #FFE77AFF;
+  }
 }
