--- a/MentoringNavbar.css
+++ b/MentoringNavbar.css
@@ -104,7 +104,7 @@
     .navbar .menu-list{
       position: fixed;
       height: 100vh;
-      width: 100%;
+      width: 70%;
       max-width: 400px;
       left: -100%;
       top: 0px;
@@ -137,4 +137,14 @@
         width: 100%;
         max-width: 40px;
     }
+
+    ::-webkit-scrollbar {
+      width: 0px;
+  }
+  ::-webkit-scrollbar-track {
+      background: #191825;
+  }
+  ::-webkit-scrollbar-thumb {
+      background: #FFA3FD;
+  }
   }
