--- a/PrayerRequest.css
+++ b/PrayerRequest.css
@@ -116,7 +116,7 @@ a{
   .navbar .menu-list{
     position: fixed;
     height: 100vh;
-    width: 100%;
+    width: 70%;
     max-width: 400px;
     left: -100%;
     top: 0px;
@@ -148,6 +148,16 @@ a{
     width: 100%;
     max-width: 40px;
   }
+
+  ::-webkit-scrollbar {
+    width: 0px;
+}
+::-webkit-scrollbar-track {
+    background: black;
+}
+::-webkit-scrollbar-thumb {
+    background: #f1f1f1;
+}
 }
 
 .textPrayer{
