--- a/SOLNavBar.css
+++ b/SOLNavBar.css
@@ -104,14 +104,14 @@
     .navbar .menu-list{
       position: fixed;
       height: 100vh;
-      width: 100%;
+      width: 70%;
       max-width: 400px;
       left: -100%;
       top: 0px;
       display: block;
       padding: 40px 0;
       text-align: center;
-      background: #222;
+      background: #1868AE;
       transition: all 0.3s ease;
     }
     .navbar.show .menu-list{
@@ -137,4 +137,17 @@
         width: 100%;
         max-width: 40px;
     }
+
+    ::-webkit-scrollbar {
+      width: 0px;
+  }
+  ::-webkit-scrollbar-track {
+      background: #1868AE;
+  }
+  ::-webkit-scrollbar-thumb {
+      background: #C6D7EB;
+  }
+  ::selection{
+      background: rgb(0,123,255,0.3);
+  }
   }
