--- a/Spearhead.css
+++ b/Spearhead.css
@@ -403,14 +403,14 @@ a{
     .navbar .menu-list{
       position: fixed;
       height: 100vh;
-      width: 100%;
+      width: 70%;
       max-width: 400px;
       left: -100%;
       top: 0px;
       display: block;
       padding: 40px 0;
       text-align: center;
-      background: #222;
+      background: #2c5f2d;
       transition: all 0.3s ease;
     }
     .navbar.show .menu-list{
@@ -427,6 +427,17 @@ a{
     .navbar.show .menu-list li a{
       margin-left: 0px;
     }
+
+    /* custom scroll bar */
+::-webkit-scrollbar {
+  width: 0px;
+}
+::-webkit-scrollbar-track {
+  background: #2C5F2DFF;
+}
+::-webkit-scrollbar-thumb {
+  background: #FFE77AFF;
+}
   }
   
   /* ==================================================== */
