--- a/StoriesNavBar.css
+++ b/StoriesNavBar.css
@@ -99,14 +99,14 @@
     .navbar .menu-list{
       position: fixed;
       height: 100vh;
-      width: 100%;
+      width: 70%;
       max-width: 400px;
       left: -100%;
       top: 0px;
       display: block;
       padding: 40px 0;
       text-align: center;
-      background: #222;
+      background: #FF69B4;
       transition: all 0.3s ease;
     }
     .navbar.show .menu-list{
@@ -132,4 +132,17 @@
         width: 100%;
         max-width: 40px;
       }
+
+      ::-webkit-scrollbar {
+        width: 0px;
+    }
+    ::-webkit-scrollbar-track {
+        background: #FF69B4;
+    }
+    ::-webkit-scrollbar-thumb {
+        background: #00FFFF;
+    }
+    ::selection{
+      background: rgb(0,123,255,0.3);
+    }
   }
