--- a/story.css
+++ b/story.css
@@ -19,7 +19,7 @@ a{
 
 .banner{
     width: 100%;
-    background-image: linear-gradient(rgba(255,105,180, 0.9),rgba(255,105,180, 0.9)), url(J12KidsIMGs/kidsandjesus.jpg);
+    background-image: linear-gradient(rgba(255,105,180, 0.9),rgba(255,105,180, 0.9));
     background-size: cover;
     color: white;
     padding-bottom: 5%;
@@ -105,6 +105,7 @@ a{
         text-align: center;
         font-size: 4vw;
         font-family: 'Andika';
+        margin: 2%;
     }
     
     .home img{
