--- a/Spearhead.css
+++ b/Spearhead.css
@@ -240,64 +240,6 @@ a{
 
 /* ================================================ */
 
-.blogs{
-    margin-left: 10%;
-    margin-right: 10%;
-}
-
-.blogs h1{
-    font-size: 4vw;
-    text-align: center;
-    font-family: 'Source Code Pro';
-}
-
-.blogs p{
-    font-size: 2vw;
-    text-align: center;
-    font-family: 'Source Code Pro';
-}
-
-
-.row1{
-    display: flex;
-    margin-left: 10%;
-    margin-right: 10%;
-    justify-content: center;
-}
-
-.news{
-    width: 33%;
-    margin-top: 3%;
-    margin-left: 2%;
-    margin-right: 2%;
-    margin-bottom: 3%;
-    background-image: url(SpearheadIMGs/Blogs.jpg);
-    background-size: cover;
-    background-position: center;
-    border-radius: 10px;
-    cursor: pointer;
-}
-
-.newsInfo{
-    padding-top: 30%;
-    padding-bottom: 30%;
-    border-radius: 10px;
-    background-color: #2c5f2d;
-    color: #ffe77a;
-    transition: 0.5s;
-}
-
-.newsInfo:hover{
-    background-color: transparent;
-    color: transparent;
-}
-
-.newsInfo h1{
-    text-align: center;
-}
-
-/* ================================================ */
-
 .subs{
     display: flex;
     margin-left: 10%;
@@ -594,64 +536,6 @@ a{
     }
     
     /* ================================================ */
-    
-    
-    .blogs{
-        margin-top: 10%;
-        margin-left: 5%;
-        margin-right: 5%;
-    }
-    
-    .blogs h1{
-        font-size: 10vw;
-        text-align: center;
-        font-family: 'Source Code Pro';
-    }
-    
-    .blogs p{
-        font-size: 4vw;
-        text-align: center;
-        font-family: 'Source Code Pro';
-    }
-    
-    
-    .row1{
-        display: block;
-        margin-left: 5%;
-        margin-right: 5%;
-        justify-content: center;
-    }
-    
-    .news{
-        width: 100%;
-        margin-top: 2%;
-        margin-left: 0%;
-        margin-right: 0%;
-        margin-bottom: 0%;
-        background-image: url(SpearheadIMGs/Blogs.jpg);
-        background-size: cover;
-        background-position: center;
-        border-radius: 10px;
-        cursor: pointer;
-    }
-    
-    .newsInfo{
-        padding-top: 10%;
-        padding-bottom: 10%;
-        border-radius: 10px;
-        background-color: #2c5f2d;
-        color: #ffe77a;
-        transition: 0.5s;
-    }
-    
-    .newsInfo:hover{
-        background-color: transparent;
-        color: transparent;
-    }
-    
-    .newsInfo h1{
-        text-align: center;
-    }
 
     .subs{
         display: block;
@@ -919,3 +803,439 @@ a{
       color: #ffe77a;
     }
 }
+
+#blogs{
+  background-color: #FFE77AFF;
+  color: #2c5f2d;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  margin-top: 5%;
+}
+
+.desc h1{
+  margin-left: 10%;
+  font-family: 'Source Code Pro';
+  font-size: 4vw;
+  margin-top: 3%;
+}
+
+.desc p{
+  margin-left: 10%;
+  font-family: 'Source Code Pro';
+  font-size: 1.1vw;
+  margin-top: 1%;
+  margin-bottom: 2%;
+}
+
+.blogs{
+  display: flex;
+  margin-left: 10%;
+  margin-right: 10%;
+  justify-content: center;
+}
+
+.column{
+  width: 80%;
+}
+
+.column h1{
+  font-size: 2.5vw;
+  margin-bottom: 2%;
+  font-family: "Source Code Pro";
+}
+
+.column .blog{
+  background-image: linear-gradient(rgba(44,95,45, 0.7),rgba(44,95,45, 0.7)), url(SpearheadIMGs/bruh.jpg);
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+  margin-right: 5%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  transition: transform .2s;
+}
+
+.column .blog .blogInfo{
+  color: white;
+  text-align: left;
+  padding-top: 32%;
+  padding-bottom: 7%;
+  text-indent: 5%;
+  margin-left: 3%;
+  margin-right: 3%;
+  border-radius: 10px;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.column .blog .blogInfo:hover{
+  border: 1px solid #ffe77a;
+}
+
+.column .blog:hover{
+  transform: scale(1.1);
+}
+
+.column .blog  .blogInfo h1{
+  font-family: 'Source Code Pro';
+  font-size: 3vw;
+}
+
+.column .blog  .blogInfo p{
+  font-size: 1.4vw;
+}
+
+.column2{
+  width: 40%;
+  height: 500px;
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
+.column2 h1{
+  font-size: 2.5vw;
+  margin-bottom: 2%;
+  font-family: "Source Code Pro";
+}
+
+.column2 .blog{
+  background-image: linear-gradient(rgba(44,95,45, 0.7),rgba(44,95,45, 0.7)), url(SpearheadIMGs/plan.jpg);
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+  margin-right: 5%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  transition: transform .2s;
+  margin-bottom: 5%;
+}
+
+.column2 .blog .blogInfo{
+  color: white;
+  text-align: left;
+  padding-top: 32%;
+  padding-bottom: 7%;
+  text-indent: 5%;
+  margin-left: 3%;
+  margin-right: 3%;
+  border-radius: 10px;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.column2 .blog .blogInfo:hover{
+  border: 1px solid #ffe77a;
+}
+
+.column2 .blog  .blogInfo h1{
+  font-family: 'Source Code Pro';
+  font-size: 1.5vw;
+}
+
+.column2 .blog  .blogInfo p{
+  font-size: 1vw;
+}
+
+.column2 .blog2{
+  background-image: linear-gradient(rgba(44,95,45, 0.7),rgba(44,95,45, 0.7)), url(SpearheadIMGs/life.jpg);
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+  margin-right: 5%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  transition: transform .2s;
+  margin-bottom: 5%;
+}
+
+.column2 .blog2 .blogInfo{
+  color: white;
+  text-align: left;
+  padding-top: 32%;
+  padding-bottom: 7%;
+  text-indent: 5%;
+  margin-left: 3%;
+  margin-right: 3%;
+  border-radius: 10px;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.column2 .blog2 .blogInfo:hover{
+  border: 1px solid #ffe77a;
+}
+
+.column2 .blog2 .blogInfo h1{
+  font-family: 'Source Code Pro';
+  font-size: 1.5vw;
+}
+
+.column2 .blog2  .blogInfo p{
+  font-size: 1vw;
+}
+
+.column2 .blog3{
+  background-image: linear-gradient(rgba(44,95,45, 0.7),rgba(44,95,45, 0.7)), url(SpearheadIMGs/TIME.jpg);
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+  margin-right: 5%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  transition: transform .2s;
+  margin-bottom: 5%;
+}
+
+.column2 .blog3 .blogInfo{
+  color: white;
+  text-align: left;
+  padding-top: 32%;
+  padding-bottom: 7%;
+  text-indent: 5%;
+  margin-left: 3%;
+  margin-right: 3%;
+  border-radius: 10px;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.column2 .blog3 .blogInfo:hover{
+  border: 1px solid #ffe77a;
+}
+
+.column2 .blog3 .blogInfo h1{
+  font-family: 'Source Code Pro';
+  font-size: 1.7vw;
+}
+
+.column2 .blog3  .blogInfo p{
+  font-size: 1vw;
+}
+
+@media (max-width: 500px) {
+  #blogs{
+    padding-top: 10%;
+    padding-bottom: 10%;
+    margin-top: 5%;
+}
+
+.desc h1{
+    margin-left: 0%;
+    font-family: 'Source Code Pro';
+    font-size: 8vw;
+    margin-top: 3%;
+    margin-bottom: 2%;
+    text-align: center;
+}
+
+.desc p{
+  margin-left: 0%;
+  font-family: 'Source Code Pro';
+  font-size: 4vw;
+  margin-top: 3%;
+  margin-bottom: 2%;
+  text-align: center;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+
+.blogs{
+    display: block;
+    margin-left: 5%;
+    margin-right: 5%;
+    justify-content: center;
+}
+
+.column{
+    display: block;
+    width: 100%;
+    margin: auto;
+    justify-content: center;
+}
+
+.column h1{
+  font-size: 5vw;
+}
+
+.column2 h1{
+  font-size: 5vw;
+}
+
+.column .blog{
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    display: block;
+    margin: auto;
+    transition: transform .2s;
+    margin-bottom: 5%;
+}
+
+.column .blog .blogInfo{
+    color: white;
+    text-align: left;
+    padding-top: 20%;
+    padding-bottom: 7%;
+    text-indent: 5%;
+    margin-left: 3%;
+    margin-right: 3%;
+    border-radius: 10px;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.column .blog .blogInfo:hover{
+    border: 0px solid #ffe77a;
+}
+
+.column .blog:hover{
+    transform: none;
+}
+
+.column .blog  .blogInfo h1{
+    font-family: 'Source Code Pro';
+    font-size: 6vw;
+}
+
+.column .blog  .blogInfo p{
+    font-size: 4vw;
+}
+
+.column2{
+    width: 100%;
+}
+
+.column2 .blog{
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+    margin-right: 5%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    display: block;
+    margin: auto;
+    transition: transform .2s;
+    margin-bottom: 5%;
+}
+
+.column2 .blog .blogInfo{
+    color: white;
+    text-align: left;
+    padding-top: 10%;
+    padding-bottom: 7%;
+    text-indent: 5%;
+    margin-left: 3%;
+    margin-right: 3%;
+    border-radius: 10px;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.column2 .blog .blogInfo:hover{
+    border: 0px solid #ffe77a;
+}
+
+.column2 .blog:hover{
+    transform: none;
+}
+
+.column2 .blog  .blogInfo h1{
+    font-family: 'Source Code Pro';
+    font-size: 6vw;
+}
+
+.column2 .blog  .blogInfo p{
+    font-size: 4vw;
+}
+
+.column2 .blog2{
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+    margin-right: 5%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    display: block;
+    margin: auto;
+    transition: transform .2s;
+    margin-bottom: 5%;
+}
+
+.column2 .blog2 .blogInfo{
+    color: white;
+    text-align: left;
+    padding-top: 10%;
+    padding-bottom: 7%;
+    text-indent: 5%;
+    margin-left: 3%;
+    margin-right: 3%;
+    border-radius: 10px;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.column2 .blog2 .blogInfo:hover{
+    border: 0px solid #ffe77a;
+}
+
+.column2 .blog2:hover{
+    transform: none;
+}
+
+.column2 .blog2 .blogInfo h1{
+    font-family: 'Source Code Pro';
+    font-size: 6vw;
+}
+
+.column2 .blog2  .blogInfo p{
+    font-size: 4vw;
+}
+
+.column2 .blog3{
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+    margin-right: 5%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    transition: transform .2s;
+    margin-bottom: 5%;
+    display: block;
+    margin: auto;
+}
+
+.column2 .blog3 .blogInfo{
+    color: white;
+    text-align: left;
+    padding-top: 10%;
+    padding-bottom: 7%;
+    text-indent: 5%;
+    margin-left: 3%;
+    margin-right: 3%;
+    border-radius: 10px;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.column2 .blog3 .blogInfo:hover{
+    border: 0px solid #ffe77a;
+}
+
+.column2 .blog3:hover{
+    transform: none;
+}
+
+.column2 .blog3 .blogInfo h1{
+    font-family: 'Source Code Pro';
+    font-size: 6vw;
+}
+
+.column2 .blog3  .blogInfo p{
+    font-size: 4vw;
+}
+}
+
+
