--- a/public/fireblogs.css
+++ b/public/fireblogs.css
@@ -13,21 +13,6 @@
     scroll-behavior: smooth;
 }
 
-/* width */
-::-webkit-scrollbar {
-  width: 15px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: black;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: yellow;
-}
-
 .content{
     max-width: 1550px;
     margin: auto;
@@ -121,14 +106,14 @@
   .navbar .menu-list{
     position: fixed;
     height: 100vh;
-    width: 70%;
+    width: 100%;
     max-width: 400px;
     left: -100%;
     top: 0px;
     display: block;
     padding: 40px 0;
     text-align: center;
-    background: black;
+    background: #222;
     transition: all 0.3s ease;
   }
   .navbar.show .menu-list{
@@ -145,30 +130,6 @@
   .navbar.show .menu-list li a{
     margin-left: 0px;
   }
-
-  .navbar .logo img{
-    width: 40%;
-}
-
-.icon img{
-    width: 100%;
-    max-width: 40px;
-}
-
-::-webkit-scrollbar {
-  width: 0px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: black;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: yellow;
-}
-
 }
 
 
@@ -235,7 +196,6 @@ span{
 
 @media (max-width: 500px) {
     .banner{
-        padding-top: 20%;
         padding-bottom: 20%;
     }
     
